--- a/ievad/config.yaml
+++ b/ievad/config.yaml
@@ -32,6 +32,9 @@ pca_params :          "ievad/vggish/vggish_pca_params.npz"
 # column name of model prediction values
 preds_column:         'Prediction value'
 
+# CONDENSER:
+dt_format_std:        False
+dt_format:            '%d%m%y%H%M%S'
 
 ## HELPER VARS ##
 # preprocessing configurations
@@ -40,10 +43,11 @@ preproc:
   # annots_path:        '/home/vincent/Code/MA/Daten/Catherine_annotations'
   annots_path:        '/home/vincent/Code/MA/generated_annotations/for_umap'
   # main parent directory containing all sound files
-  # sound_files_path:   '/media/vincent/Seagate Backup Plus Drive/VINCENT_RawData'
-  sound_files_path:   '/media/vincent/Expansion/NOAA/NRS08_20162018_new20220711'
+  sound_files_path:   '/media/vincent/Extreme SSD/MA'
+  # sound_files_path:   '/media/vincent/Expansion/NOAA/NRS08_20162018_new20220711'
   # set to lowest sample rate in your dataset, to ensure comparability
   downsample_sr:      2000
+  resamp_size:        10000000
   # if you don't want to downsample the data to a common sample rate, set to 'False'
   downsample:         True
 
