--- a/requirements.txt
+++ b/requirements.txt
@@ -1,141 +1,95 @@
-absl-py==1.2.0
-ansi2html==1.8.0
-appdirs==1.4.4
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-astunparse==1.6.3
-attrs==22.1.0
-audioread==2.1.9
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==5.0.1
-Brotli==1.0.9
-cachetools==5.2.0
-certifi==2022.6.15
-cffi==1.15.1
-charset-normalizer==2.1.0
-click==8.1.3
-cycler==0.11.0
-dash==2.6.1
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-debugpy==1.6.2
-decorator==5.1.1
-defusedxml==0.7.1
-entrypoints==0.4
-executing==0.9.1
-fastjsonschema==2.16.1
-Flask==2.2.1
-Flask-Compress==1.12
-flatbuffers==1.12
-fonttools==4.34.4
-gast==0.4.0
-google-auth==2.9.1
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.47.0
-h5py==3.7.0
+apturl==0.5.2
+attrs==21.2.0
+bcrypt==3.2.0
+blinker==1.4
+Brlapi==0.8.3
+certifi==2020.6.20
+chardet==4.0.0
+click==8.0.3
+colorama==0.4.4
+command-not-found==0.3
+cryptography==3.4.8
+cupshelpers==1.0
+dbus-python==1.2.18
+defer==1.0.6
+distlib==0.3.4
+distro==1.7.0
+distro-info===1.1build1
+dnspython==2.1.0
+docker==5.0.3
+docker-compose==1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
+duplicity==0.8.21
+ecdsa==0.18.0b1
+fasteners==0.14.1
+filelock==3.6.0
+future==0.18.2
+httplib2==0.20.2
 idna==3.3
-ipykernel==6.15.1
-ipython==8.4.0
-ipython-genutils==0.2.0
-ipywidgets==7.7.1
-itsdangerous==2.1.2
-jedi==0.18.1
-Jinja2==3.1.2
-joblib==1.1.0
-jsonschema==4.9.1
-jupyter-client==7.3.4
-jupyter-core==4.11.1
-jupyter-dash==0.4.2
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==1.1.1
-keras==2.9.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.4
-libclang==14.0.6
-librosa==0.9.2
-llvmlite==0.39.0
-Markdown==3.4.1
-MarkupSafe==2.1.1
-matplotlib==3.5.2
-matplotlib-inline==0.1.3
-mistune==0.8.4
-nbclient==0.6.6
-nbconvert==6.5.0
-nbformat==5.4.0
-nest-asyncio==1.5.5
-notebook==6.4.12
-numba==0.56.0
-numpy==1.22.4
+importlib-metadata==4.6.4
+jeepney==0.7.1
+jsonschema==3.2.0
+keyring==23.5.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+louis==3.20.0
+macaroonbakery==1.3.1
+Mako==1.1.3
+MarkupSafe==2.0.1
+monotonic==1.6
+more-itertools==8.10.0
+netifaces==0.11.0
 oauthlib==3.2.0
-opt-einsum==3.3.0
-packaging==21.3
-pandas==1.4.3
-pandocfilters==1.5.0
-parso==0.8.3
+olefile==0.46
+paramiko==2.9.3
+pbr==5.8.0
 pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.2.0
-playsound==1.3.0
-plotly==5.9.0
-pooch==1.6.0
-prometheus-client==0.14.1
-prompt-toolkit==3.0.30
-protobuf==3.19.4
-psutil==5.9.1
+Pillow==9.0.1
+platformdirs==2.5.2
+protobuf==3.12.4
+psutil==5.9.0
 ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-Pygments==2.12.0
-pynndescent==0.5.7
-pyparsing==3.0.9
-PyQt5==5.15.7
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.11.0
+pycairo==1.20.1
+pycryptodomex==3.11.0
+pycups==2.0.1
+PyGObject==3.42.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyparsing==2.4.7
+pyRFC3339==1.1
 pyrsistent==0.18.1
-python-dateutil==2.8.2
+python-apt==2.3.0+ubuntu2.1
+python-dateutil==2.8.1
+python-debian===0.1.43ubuntu1
+python-dotenv==0.19.2
 pytz==2022.1
-PyYAML==6.0
-pyzmq==23.2.0
-requests==2.28.1
-requests-oauthlib==1.3.1
-resampy==0.3.1
-retrying==1.3.3
-rsa==4.9
-scikit-learn==1.1.1
-scipy==1.9.0
-Send2Trash==1.8.0
+pyxdg==0.27
+PyYAML==5.4.1
+reportlab==3.6.8
+requests==2.25.1
+requests-toolbelt==0.9.1
+SecretStorage==3.3.1
+simplejson==3.17.6
 six==1.16.0
-sounddevice==0.4.5
-SoundFile==0.10.3.post1
-soupsieve==2.3.2.post1
-stack-data==0.3.0
-tenacity==8.0.1
-tensorboard==2.9.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.9.1
-tensorflow-estimator==2.9.0
-tensorflow-io-gcs-filesystem==0.26.0
-termcolor==1.1.0
-terminado==0.15.0
-tf-slim==1.1.0
-threadpoolctl==3.1.0
-tinycss2==1.1.1
-tornado==6.2
-tqdm==4.64.0
-traitlets==5.3.0
-typing_extensions==4.3.0
-umap==0.1.1
-umap-learn==0.5.3
-urllib3==1.26.11
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.2.1
-widgetsnbextension==3.6.1
-wrapt==1.14.1
+systemd-python==234
+testresources==2.0.1
+texttable==1.6.4
+ubuntu-advantage-tools==27.11.2
+ubuntu-drivers-common==0.0.0
+ufw==0.36.1
+unattended-upgrades==0.1
+unittest2==1.1.0
+urllib3==1.26.5
+usb-creator==0.3.7
+virtualenv==20.14.1
+wadllib==1.3.6
+websocket-client==1.2.3
+xdg==5
+xkit==0.0.0
+xlib==0.21
+zipp==1.0.0
