--- a/ievad/config.yaml
+++ b/ievad/config.yaml
@@ -4,7 +4,7 @@
 # define paths for your data, these are the standard directories, if you 
 # used the file condenser. If you do not have annotated data, and all of your
 # sound files are in one directory, change accordingly
-raw_data_path :       "ievad/files/raw/wo_annots"
+raw_data_path :       "ievad/files/raw/presi"
 
 # fixed path, embeddings will be stored here, DO NOT CHANGE
 pickled_data_path :   "ievad/files/embeds"
@@ -50,11 +50,11 @@ preproc:
   downsample_sr:      2000
   resamp_size:        10000000
   # if you don't want to downsample the data to a common sample rate, set to 'False'
-  downsample:         False
+  downsample:         True
 
   ## Fixed model parameters, do not change
-  # model_sr:           4000
-  # model_time_length:  2
-  model_sr:           16000
-  model_time_length:  0.96
+  model_sr:           6000
+  model_time_length:  2
+  # model_sr:           16000
+  # model_time_length:  0.96
 
