--- a/ievad/config.yaml
+++ b/ievad/config.yaml
@@ -4,10 +4,16 @@
 # define paths for your data, these are the standard directories, if you 
 # used the file condenser. If you do not have annotated data, and all of your
 # sound files are in one directory, change accordingly
-raw_data_path :       "ievad/files/raw/humpbacks"
+audio_dir :       "ievad/files/audio/humpbacks"
 
 # fixed path, embeddings will be stored here, DO NOT CHANGE
-pickled_data_path :   "ievad/files/embeds"
+embed_parent_dir :   "ievad/files/embeds"
+
+# sample rate
+sr : 16000
+
+# embedding model name
+embedding_model: 'vggish'
 
 # length limitation for condensed file
 segs_lim:             1500
@@ -24,14 +30,6 @@ f_min:                50
 # amplify audio to make audible
 amp:                  5
 
-# MODEL:
-# relevant files for the model
-checkpoint :          "ievad/vggish/vggish_model.ckpt"
-pca_params :          "ievad/vggish/vggish_pca_params.npz"
-
-# PREDICTIONS:
-# column name of model prediction values
-preds_column:         'Prediction value'
 
 # CONDENSER:
 dt_format_std:        False
@@ -48,7 +46,7 @@ preproc:
   # sound_files_path:   '/media/vincent/Expansion/NOAA/NRS08_20162018_new20220711'
   # set to lowest sample rate in your dataset, to ensure comparability
   downsample_sr:      2000
-  resamp_size:        10000000
+  resamp_size:        10000
   # if you don't want to downsample the data to a common sample rate, set to 'False'
   downsample:         True
 
