--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,32 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+frontend/node_modules*
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+#python
 *__pycache__*
-ievad/files/embeds/*
-ievad/files/umap_embeds/*
-ievad/files/models/*
+files/embeds/*
+files/umap_embeds/*
+backend/ievad/models/*
 ievad/files/audio/*
 # files/raw/*
 inemviz/vggish/training*
