#8 api works, highlighting of points works, backend saves the umap embeddings as jsons that are readable by frontend

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python Debugger: FastAPI",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "uvicorn",
+            "args": [
+                "backend.sample:app",
+                "--reload"
+            ],
+            "jinja": true
+        },
+        {
             "name": "Python: Current File",
             "type": "debugpy",
             "request": "launch",
