--- a/backend/ievad/config.yaml
+++ b/backend/ievad/config.yaml
@@ -4,22 +4,25 @@
 # define paths for your data, these are the standard directories, if you 
 # used the file condenser. If you do not have annotated data, and all of your
 # sound files are in one directory, change accordingly
-audio_dir :       "ievad/files/audio/rainforest"
+audio_dir :       "frontend/public/files/audio/humpbacks"
 # audio_dir :       "/media/vincent/Extreme SSD/MA/20221019-Benoit/transfer_1780104_files_cfc5b86f/SABA01_201511_201604_SN275/resampled_2kHz/wav"
 
 # fixed path, embeddings will be stored here, DO NOT CHANGE
-embed_parent_dir :   "ievad/files/embeds"
-umap_parent_dir :   "ievad/files/umap_embeds"
+embed_parent_dir :   "frontend/public/files/embeds"
+umap_parent_dir :   "frontend/public/files/umap_embeds"
 
-# annots_path:        'ievad/files/raw/annots'
+# annots_path:        'files/raw/annots'
 # sample rate
-sr : 48000
+sr : 2000
 
 # embedding model name
-embedding_model: 'birdnet'
+embedding_model: 'aves'
 
 # length limitation for condensed file
 segs_lim:             1500
+
+# supported formats of audio files
+audio_suffixes: ['.wav', '.WAV', '.aif', '.mp3']
 
 # PLOTTING:
 # heading for main interactive plot
@@ -51,7 +54,7 @@ preproc:
   annots_path:        "/media/vincent/Extreme SSD/MA/20221019-Benoit/transfer_1780104_files_cfc5b86f/SABA01_201511_201604_SN275/selTab"
   # annots_path:        '/home/vincent/Code/MA/generated_annotations/for_umap'
   # main parent directory containing all sound files
-  sound_files_path:   'ievad/files/raw/uncondensed'
+  sound_files_path:   'files/raw/uncondensed'
   # sound_files_path:   '/media/vincent/Expansion/NOAA/NRS08_20162018_new20220711'
   # set to lowest sample rate in your dataset, to ensure comparability
   downsample_sr:      2000
@@ -61,7 +64,7 @@ preproc:
 
   ## Fixed model parameters, do not change
   model_sr:           2000
-  model_time_length:  3.8775
+  model_time_length:  3
   plot_spec_sr:       2000
   # model_sr:           16000
   # model_time_length:  0.96
