--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.5",
+    "bootstrap": "^5.3.3",
     "d3": "^7.9.0",
     "npyjs": "^0.6.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.4",
